# RubiksCube-Solver

./: CMakeLists.txt  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1D.cpp  RubiksCube3D.cpp
Solver/: BFS.cpp  DFS.cpp  IDDFS.cpp
